--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "sass --watch ./src/scss/style.scss ./src/css/style.css"
+    "dev": "sass --watch ./assets/scss/style.scss ./assets/css/style.css"
   },
   "keywords": [],
   "author": "",
